cmake_minimum_required(VERSION 3.9)
project(act04)

set(CMAKE_CXX_STANDARD 17)

add_executable(act04 main.cpp cmake-build-debug/customer.cpp cmake-build-debug/customer.h cmake-build-debug/invoice.cpp cmake-build-debug/invoice.h cmake-build-debug/CMakeFiles/InvoiceItem.cpp cmake-build-debug/CMakeFiles/InvoiceItem.h)